提交所有修改5月9号

--- a/app.json
+++ b/app.json
@@ -1,20 +1,33 @@
 {
   "pages": [
+    "pages/personl/join/join",
+    "pages/personl/push/push",
+    "pages/personl/fans/fans",
+    "pages/personl/advise/advise",
+    "pages/personl/usersex/usersex",
+    "pages/personl/username/username",
+    "pages/personl/personl_Set/personl_Set",
+    "pages/personl/share/share",
+    "pages/personl/userabout/userabout",
+    "pages/index/index",
+    "pages/Release/history_res/history_res",
+    "pages/Release/joined/joined",
+    "pages/index/pl/pl",
+    "pages/index/myrun/myrun",
+    "pages/index/wantBill/wantBill",
     "pages/index/run/run",
+    "pages/index/phone/phone",
     "pages/Release/Push_active/Push_active",
     "pages/Release/push_experience/push_experience",
     "pages/Release/Editors_bg/Editors_bg",
     "pages/Release/Editors_details/Editors_details",
     "pages/Release/history/history",
-    "pages/Release/joined/joined",
-    "pages/Release/history_res/history_res",
     "pages/Release/join_res/join_res",
     "pages/Release/experience_res/experience_res",
     "pages/Release/Publish/Publish",
     "pages/Release/sure_Gift/sure_Gift",
     "pages/Release/Release",
     "pages/personl/personl",
-    "pages/index/index",
     "pages/index/SharedExperience/SharedExperience",
     "pages/near/near"
   ],
