--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
 	"description": "项目配置文件。",
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.91",
-	"appid": "wx64aef3fd38c8bee2",
-	"projectname": "%E4%BA%AB%E9%81%87%E7%A7%91%E6%8A%80%E5%B0%8F%E7%A8%8B%E5%BA%8F%E7%89%88%E6%9C%AC",
+	"appid": "wx8e2e6afc52572ef6",
+	"projectname": "%E4%BA%AB111",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
