修复音频播放功能

--- a/project.config.json
+++ b/project.config.json
@@ -8,9 +8,9 @@
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "1.9.91",
+	"libVersion": "1.9.9",
 	"appid": "wx8e2e6afc52572ef6",
-	"projectname": "%E4%BA%AB111",
+	"projectname": "%E4%BA%AB%E8%AA%89",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
