--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.9",
-	"appid": "wx8e2e6afc52572ef6",
+	"appid": "wx64aef3fd38c8bee2",
 	"projectname": "%E4%BA%AB%E8%AA%89",
 	"isGameTourist": false,
 	"condition": {
