--- a/project.config.json
+++ b/project.config.json
@@ -9,8 +9,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.9",
-	"appid": "wx64aef3fd38c8bee2",
-	"projectname": "%E4%BA%AB%E8%AA%89",
+	"appid": "wx4fd93ae4dd453046",
+	"projectname": "%E4%BA%AB%E8%AA%89%E6%96%B0%E8%B4%A6%E5%8F%B7%E7%89%88%E6%9C%AC",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
