6月15号享遇科技小程序

--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "pages": [
     "pages/index/index",
+    "pages/test/test",
     "pages/begin/begin",
     "pages/pay/pay",
     "pages/personl/sendGift/sendGift",
